fix alignment problems

--- a/src/styles/calculator.scss
+++ b/src/styles/calculator.scss
@@ -30,6 +30,7 @@ body {
 .mainframe {
   display: grid;
   width: auto;
+  height: auto;
   max-width: 500px;
   grid-template-rows: repeat(6, 1fr);
   grid-template-columns: repeat(4, 1fr);
